force-app/main/default/objects/BMCServiceDesk__Change_History__c/BMCServiceDesk__Change_History__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpChangeHistory</customHelpPage>
    <description>This object allows you to store data that tracks the history of all actions that have been performed on Change Requests.</description>
    <label>Change History</label>
    <nameField>
        <label>Change History ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>