force-app/main/default/objects/BMCServiceDesk__Change_History__c/fields/BMCServiceDesk__Action__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Action__c</fullName>
    <description>This field stores the action linked to the change</description>
    <formula>BMCServiceDesk__FKAction__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the user-defined actions that are applicable to change requests. User-defined actions are used to record details of the steps taken to complete the change request.</inlineHelpText>
    <label>Action~</label>
    <type>Text</type>
</CustomField>