force-app/main/default/objects/BMCServiceDesk__Change_History__c/fields/BMCServiceDesk__Created_By__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Created_By__c</fullName>
    <description>This field stores the user name who created the record</description>
    <formula>BMCServiceDesk__FKCreated_By__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By~</label>
    <type>Text</type>
</CustomField>