force-app/main/default/objects/BMCServiceDesk__Change_History__c/fields/BMCServiceDesk__FKAction__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the foreign key value of the linked action</description>
    <inlineHelpText>From the list of options, select the user-defined actions that are applicable to change requests. User-defined actions are used to record details of the steps taken to complete the change request.</inlineHelpText>
    <label>Action</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Action__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Action__c.BMCServiceDesk__appliesToChange__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Action__c.BMCServiceDesk__Display_In_SelfService__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Action__c</referenceTo>
    <relationshipLabel>Change Histories</relationshipLabel>
    <relationshipName>Change_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>