force-app/main/default/objects/BMCServiceDesk__Change_History__c/fields/BMCServiceDesk__FKChange__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange__c</fullName>
    <description>This field stores the foreign key value of the linked change</description>
    <inlineHelpText>From the list of options, select the user-defined actions that are applicable to change requests. User-defined actions are used to record details of the steps taken to complete the change request.</inlineHelpText>
    <label>Change</label>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>Action History</relationshipLabel>
    <relationshipName>Change_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>