force-app/main/default/objects/BMCServiceDesk__Change_History__c/fields/BMCServiceDesk__FKCreated_By__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCreated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically set to the user who created the history record.</description>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_History</relationshipName>
    <type>Lookup</type>
</CustomField>