force-app/main/default/objects/BMCServiceDesk__Change_History__c/fields/BMCServiceDesk__Inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores the value if the record is active or inactive</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>